syntax = "proto3";
option java_generic_services = true;
option java_package = "org.marketcetera.cluster.rpc";
option java_outer_classname = "ClusterRpc";
import "rpc_base.proto";
import "google/protobuf/timestamp.proto";

message ClusterData {
    string hostId = 1;
    uint32 hostNumber = 2;
    uint32 instanceNumber = 3;
    uint32 totalInstances = 4;
    string uuid = 5;
}

message InstanceDataRequest {
    string sessionId = 1;
    uint32 affinity = 2;
}

message InstanceDataResponse {
    InstanceData instanceData = 1;
}

message InstanceData {
    string hostname = 1;
    uint32 port = 2;
}

service ClusterRpcService {
    rpc login(LoginRequest) returns (LoginResponse);
    rpc logout(LogoutRequest) returns (LogoutResponse);
    rpc heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
    rpc getInstanceData(InstanceDataRequest) returns (InstanceDataResponse);
}
